<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/recipe_id"
    android:layout_height="match_parent">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/fragment_recipe_total_text"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingRight="5dp"
                android:text="@string/recipe_total_title"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/fragment_recipe_total_value"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/hello_blank_fragment"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:shadowColor="@color/colorImage"
                android:text="@string/recipe_name_title" />
            <TextView
                android:shadowColor="@color/colorImage"
                android:textAlignment="center"
                android:layout_weight="0.2"
                android:text="@string/recipe_amount_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:shadowColor="@color/colorImage"
                android:textAlignment="center"
                android:layout_weight="0.2"
                android:text="@string/recipe_price_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:shadowColor="@color/colorImage"
                android:textAlignment="center"
                android:layout_weight="0.1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>
        <RelativeLayout
            android:id="@+id/fragment_pedido_replace"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </RelativeLayout>


    </LinearLayout>


</LinearLayout>