<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical"
    tools:context="com.systematic.preventa.Fragment.RecipeFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_gravity="top"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/fragment_recipe_total_text"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_weight="1"
                android:paddingRight="5dp"
                android:text="@string/recipe_total_title" />
        <TextView
            android:id="@+id/fragment_recipe_total_value"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/hello_blank_fragment" />
        </LinearLayout>

    </LinearLayout>


            <LinearLayout
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:background="@drawable/shape"
                    android:shadowColor="@color/colorImage"
                    android:text="@string/recipe_name_title" />
                <TextView
                    android:shadowColor="@color/colorImage"
                    android:background="@drawable/shape"
                    android:textAlignment="center"
                    android:layout_weight="0.2"
                    android:text="@string/recipe_amount_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:background="@drawable/shape"
                    android:shadowColor="@color/colorImage"
                    android:textAlignment="center"
                    android:layout_weight="0.2"
                    android:text="@string/recipe_price_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:background="@drawable/shape"
                    android:shadowColor="@color/colorImage"
                    android:textAlignment="center"
                    android:layout_weight="0.1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>
    <ScrollView
        android:id="@+id/fragment_recipe_scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/fragment_recipe_row_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:shadowColor="@color/colorImage"
                android:text="@string/recipe_name_title" />
            <TextView
                android:shadowColor="@color/colorImage"
                android:textAlignment="center"
                android:layout_weight="0.2"
                android:text="@string/recipe_amount_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:shadowColor="@color/colorImage"
                android:textAlignment="center"
                android:layout_weight="0.2"
                android:text="@string/recipe_price_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.1"
                android:background="@drawable/ic_action_delete" />


        </LinearLayout>
        </LinearLayout>



    </ScrollView>



</LinearLayout>
