<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    style="@style/Base.TextAppearance.AppCompat"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:theme="@style/AppTheme"
    card_view:cardBackgroundColor="@color/colorBackground"
    card_view:cardCornerRadius="2dp">


    <LinearLayout
        android:id="@+id/fragment_product_relative_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:orientation="vertical">
            <TextView
                android:id="@+id/id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:textAppearance="?attr/textAppearanceListItem"
                android:visibility="gone" />
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/fragment_product_text_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15dp"
                        android:layout_marginTop="15dp"
                        android:text="Nombre producto"
                        android:textSize="20sp"
                        android:textStyle="normal" />
                    <TextView
                        android:id="@+id/fragment_product_text_code"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/title_carshop"
                        android:textSize="16sp"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/fragment_product_text_wholesale_price"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="@string/title_wholesale_price"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/fragment_product_text_retail_price"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/title_retail_price"
                        android:textSize="16sp" />

                </LinearLayout>

                <ImageView
                    android:id="@+id/fragment_product_img"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@color/colorImage" />


            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="bottom"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/fragment_product_text_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@color/colorBackground"
                android:shadowColor="@color/colorImage"
                android:text="@string/action_description"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:textStyle="bold" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fragment_product_btn_comprar"
                style="@style/Widget.Design.FloatingActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                card_view:srcCompat="@drawable/ic_action_add" />

        </LinearLayout>
    </LinearLayout>


</android.support.v7.widget.CardView>